# equity_viz_3d

./: README.md  app.py  main.py  pyproject.toml
api_db_classes/: query_cls.py
app/: call_stack.py  rdout_schema.py
app/UI/data_point_views/: overview_display.py
app/UI/display_windows/: home.py
app/UI/display_windows/elements/: info.py  nav.py  readout.py
app/api_db_classes/: query_cls.py
app/api_dir/: qry_cls.py  query_cls.py
app/api_dir/alpha_vantage/: overview.py
app/db_manager/db_core_classes/: db_mng.py  db_serializers.py
app/schemas_templates/: rdout_schema.py
app/tests/demo_assets/: balance_sheet.JSON  cashflow.JSON  income_state.JSON  overview.JSON  sma.JSON  wma.JSON
app/views/elements/: readout.py
app/views/sub_windows/: result_cnf_win.py
classes/: db_tables.py  serializer.py
classes/database_files/: config.py  db_tables.py  schema.py
design_docs/: design.md  pkg_lib.md
design_docs/feature_docs/data_request/: data_req.md
design_docs/feature_docs/main_window/: main_win.md
design_docs/feature_docs/search_info/: search.md
design_docs/feature_docs/tooltip_info/: tooltip.md
design_docs/user_stories/: alerts_notifications.md  conditional_analysis.md  general_use_ui.md  memory_management.md  quick_analysis.md  saves.md  strategy_dev_test.md  tax_estimate.md  tutorials_education.md  visualization_3d.md
elements/: search.py
tests/unit_tst/: db_class_tests.py  main_win_view_test.py
views/: home.py  main_win.py
views/elements/: info.py  nav.py  readout.py
